// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon> renders 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "testUri": "../../../components/Icon/assets/error_outline.png",
    }
  }
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 20,
        "width": 20,
      },
      undefined,
      undefined,
    ]
  }
/>
`;

exports[`<Icon> when {color} (only Native) 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "testUri": "../../../components/Icon/assets/close.png",
    }
  }
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 20,
        "width": 20,
      },
      undefined,
      Object {
        "tintColor": "#10c0bc",
      },
    ]
  }
/>
`;

exports[`<Icon> when {invert} (only Web) 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "testUri": "../../../components/Icon/assets/close.png",
    }
  }
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 20,
        "width": 20,
      },
      undefined,
      Object {},
    ]
  }
/>
`;

exports[`<Icon> when {size} 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "testUri": "../../../components/Icon/assets/close.png",
    }
  }
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 20,
        "width": 20,
      },
      undefined,
      Object {
        "height": 48,
        "width": 48,
      },
    ]
  }
/>
`;

exports[`<Icon> when {style} 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "testUri": "../../../components/Icon/assets/close.png",
    }
  }
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 20,
        "width": 20,
      },
      Object {
        "backgroundColor": "#10c0bc",
      },
      undefined,
    ]
  }
/>
`;

exports[`<Icon> when {value} (as uri) 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "uri": "https://api.adorable.io/avatars/48/8",
    }
  }
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 20,
        "width": 20,
      },
      undefined,
      undefined,
    ]
  }
/>
`;

exports[`<Icon> when {value} 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "testUri": "../../../components/Icon/assets/close.png",
    }
  }
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 20,
        "width": 20,
      },
      undefined,
      undefined,
    ]
  }
/>
`;
